@@ -1,3 +1,7 @@
+2003-10-19 Eric Sandall <eric [at] sandall [dot] us>
+	* src/main/states.xml:11-14: Too many levels of regression
+	even though I tested it...
+
 2003-10-18 Eric Sandall <eric [at] sandall [dot] us>
 	* src/services/gui/widget/Console.cpp:39,41: Fonts are located in dime/media/fonts
 	* src/services/gui/widget/Label.cpp:22,24: Fonts are located in dime/media/fonts
